[소켓 서비스] 알리메시지의 TaskStack parent 적용, 작성자와 메시지 내용 적용.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="input_id">아이디 입력</string>
     <string name="input_pw">패스워드 입력</string>
     <string name="input_re_pw">패스워드 재입력</string>
+    <string name="messages_channel_name">알림 채널</string>
 </resources>
