--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="input_pw">패스워드 입력</string>
     <string name="input_re_pw">패스워드 재입력</string>
     <string name="messages_channel_name">알림 채널</string>
+    <string name="kakao_map_key">3bfa41e8efe4a762addb8f916383517f</string>
 </resources>
